# clib

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ninja  clean.bat  readme.txt  test.bat
include/: arraylist.h  dynaarray.h  error.h  hashmap.h  linkedlist.h  types.h
src/: Makefile  arraylist.c  arraylist_test.c  dynaarray.c  error.c  hashmap.c  linkedlist.c  test.c  tests.c  types.c
